@@ -620,6 +620,7 @@ Fixed bugs
 - fixed sorting of primal solutions
 - fixed cleaning of clean buffer in conflict analysis
 - avoid probing on variables with huge bounds in shift and propagate heuristic
+- fix issue in printing solutions for variables that have been added by the dual sparsify presolver
 
 Miscellaneous
 -------------
